@@ -12,17 +12,14 @@
 #include <Wt/WComboBox>
 #include <Wt/WCheckBox>
 #include <Wt/WTextEdit>
+#include <Wt/Wc/global.hpp>
 
 #include "widgets/GPWidget.hpp"
 #include "model/all.hpp"
 
 namespace thechess {
 
-class MySpinBox;
-class MyDoubleSpinBox;
-class TimeDeltaWidget;
 class ClassificationWidget;
-class IntervalWidget;
 
 class CPWidget : public GPWidget {
 public:
@@ -33,26 +30,26 @@ public:
 
 private:
     Wt::WComboBox* type_;
-    MySpinBox* min_rating_;
-    MySpinBox* max_rating_;
+    Wt::Wc::ConstrainedSpinBox* min_rating_;
+    Wt::Wc::ConstrainedSpinBox* max_rating_;
     ClassificationWidget* min_classification_;
     ClassificationWidget* max_classification_;
 
-    TimeDeltaWidget* force_start_delay_;
+    Wt::Wc::TimeDurationWidget* force_start_delay_;
 
-    MySpinBox* min_users_;
-    MySpinBox* max_users_;
-    IntervalWidget* users_;
-    TimeDeltaWidget* min_recruiting_time_;
-    TimeDeltaWidget* max_recruiting_time_;
-    IntervalWidget* recruiting_time_;
+    Wt::Wc::ConstrainedSpinBox* min_users_;
+    Wt::Wc::ConstrainedSpinBox* max_users_;
+    Wt::Wc::IntervalWidget* users_;
+    Wt::Wc::TimeDurationWidget* min_recruiting_time_;
+    Wt::Wc::TimeDurationWidget* max_recruiting_time_;
+    Wt::Wc::IntervalWidget* recruiting_time_;
 
-    MySpinBox* max_simultaneous_games_;
-    MyDoubleSpinBox* games_factor_;
+    Wt::Wc::ConstrainedSpinBox* max_simultaneous_games_;
+    Wt::Wc::ConstrainedDoubleSpinBox* games_factor_;
 
-    TimeDeltaWidget* relax_time_;
-    MySpinBox* min_substages_;
-    MySpinBox* increment_substages_;
+    Wt::Wc::TimeDurationWidget* relax_time_;
+    Wt::Wc::ConstrainedSpinBox* min_substages_;
+    Wt::Wc::ConstrainedSpinBox* increment_substages_;
 
     void type_handler_();
     CompetitionType get_type_() const;
