@@ -9,11 +9,11 @@
 #include <Wt/WText>
 #include <Wt/WPushButton>
 #include <Wt/WTable>
+#include <Wt/Wc/ConstrainedSpinBox.hpp>
+#include <Wt/Wc/TimeDurationWidget.hpp>
 
 #include "widgets/GPWidget.hpp"
-#include "widgets/MySpinBox.hpp"
 #include "widgets/MovesWidget.hpp"
-#include "widgets/TimeDeltaWidget.hpp"
 #include "config.hpp"
 
 namespace thechess {
@@ -29,20 +29,23 @@ GPWidget::GPWidget(const GP* gp,
                                     max::MOVES_INIT, false, Piece::WHITE, cell);
     Wt::WPushButton* moves_reset_ = new Wt::WPushButton(tr("tc.common.Reset"), cell);
     moves_reset_->clicked().connect(moves_widget_, &MovesWidget::reset);
-    limit_std_ = new TimeDeltaWidget(min::LIMIT_STD, gp->limit_std(), max::LIMIT_STD);
+    limit_std_ = new Wt::Wc::TimeDurationWidget(min::LIMIT_STD,
+            gp->limit_std(),
+            max::LIMIT_STD);
     item(tr("tc.game.limit_std"), "", limit_std_->form_widget(), limit_std_);
-    limit_private_init_ = new TimeDeltaWidget(min::LIMIT_PRIVATE_INIT,
+    limit_private_init_ = new Wt::Wc::TimeDurationWidget(min::LIMIT_PRIVATE_INIT,
             gp->limit_private_init(), max::LIMIT_PRIVATE_INIT);
     item(tr("tc.game.limit_private_init"), "",
          limit_private_init_->form_widget(), limit_private_init_);
-    pause_limit_init_ = new TimeDeltaWidget(min::PAUSE_LIMIT_INIT,
-                                            gp->pause_limit_init(), max::PAUSE_LIMIT_INIT);
+    pause_limit_init_ = new Wt::Wc::TimeDurationWidget(min::PAUSE_LIMIT_INIT,
+            gp->pause_limit_init(),
+            max::PAUSE_LIMIT_INIT);
     item(tr("tc.game.pause_limit"), "",
          pause_limit_init_->form_widget(), pause_limit_init_);
     norating_ = new Wt::WCheckBox();
     item(tr("tc.game.norating"), "", norating_, norating_);
     norating_->setCheckState(gp->norating() ? Wt::Checked : Wt::Unchecked);
-    first_draw_ = new MySpinBox();
+    first_draw_ = new Wt::Wc::ConstrainedSpinBox();
     first_draw_->setRange(min::FIRST_DRAW / 2, max::FIRST_DRAW / 2);
     first_draw_->setValue(gp->first_draw() / 2);
     item(tr("tc.game.first_draw"), "", first_draw_, first_draw_);
@@ -50,10 +53,10 @@ GPWidget::GPWidget(const GP* gp,
 
 void GPWidget::apply_parameters(GP* gp) {
     gp->set_moves(moves_widget_->moves());
-    gp->set_limit_std(limit_std_->value());
-    gp->set_limit_private_init(limit_private_init_->value());
+    gp->set_limit_std(limit_std_->corrected_value());
+    gp->set_limit_private_init(limit_private_init_->corrected_value());
     gp->set_norating(norating_->checkState() == Wt::Checked);
-    gp->set_pause_limit(pause_limit_init_->value());
+    gp->set_pause_limit(pause_limit_init_->corrected_value());
     gp->set_first_draw(first_draw_->value() * 2);
 }
 
